# wow-alchemy

./: CHANGELOG.md  Cargo.toml  README.md  verify-tag.sh
.github/workflows/: ci.yml  cross-build.yml  release-cli.yml  release.yml
file-formats/: README.md
file-formats/database/wow-alchemy-cdbc/: Cargo.toml  README.md
file-formats/database/wow-alchemy-cdbc/src/: converter.rs  dbd.rs  error.rs  field_parser.rs  header.rs  lazy.rs  lib.rs  mmap.rs  parallel.rs  parser.rs  schema.rs  schema_discovery.rs  schema_loader.rs  sqlite_converter.rs  stringblock.rs  types.rs  versions.rs  wdb.rs  writer.rs
file-formats/database/wow-alchemy-cdbc/src/dbd/: download.rs  file_map.rs  mod.rs
file-formats/database/wow-cdbc/: README.md
file-formats/graphics/wow-alchemy-blp/: Cargo.toml  README.md
file-formats/graphics/wow-alchemy-blp/src/: lib.rs
file-formats/graphics/wow-alchemy-blp/src/convert/: jpeg.rs
file-formats/graphics/wow-alchemy-blp/src/encode/: mod.rs  primitives.rs
file-formats/graphics/wow-alchemy-blp/src/parser/: bounds.rs
file-formats/graphics/wow-alchemy-blp/src/types/: header.rs  version.rs
file-formats/graphics/wow-alchemy-blp/src/types/direct/: dxtn.rs
file-formats/graphics/wow-alchemy-m2/: Cargo.toml  README.md
file-formats/graphics/wow-alchemy-m2/src/: anim.rs  error.rs  header.rs  lib.rs  md20.rs  model.rs  skin.rs  version.rs
file-formats/graphics/wow-alchemy-m2/src/chunks/: animation.rs  attachment.rs  bone.rs  camera.rs  color_animation.rs  event.rs  file_id.rs  light.rs  material.rs  misc.rs  particle_emitter.rs  ribbon_emitter.rs  texture.rs  texture_animation.rs  texture_transform.rs  transparency_animation.rs  vertex.rs
file-formats/graphics/wow-alchemy-m2/src/phys/: body.rs  file.rs  phyt.rs  shape.rs  version.rs
file-formats/graphics/wow-alchemy-m2/src/phys/joint/: common.rs  distance.rs  mod.rs  prismatic.rs  revolute.rs  shoulder.rs  spherical.rs  weld.rs
file-formats/graphics/wow-alchemy-wmo/: Cargo.toml  README.md
file-formats/graphics/wow-alchemy-wmo/src/: lib.rs  version.rs  visualizer.rs
file-formats/graphics/wow-blp/: README.md
file-formats/graphics/wow-m2/: README.md
file-formats/graphics/wow-wmo/: README.md
file-formats/world-data/wow-adt/: README.md
file-formats/world-data/wow-alchemy-adt/: Cargo.toml  README.md
file-formats/world-data/wow-alchemy-adt/src/: adt_file.rs  chunk.rs  error.rs  lib.rs  model_export.rs  split_adt.rs  version.rs
file-formats/world-data/wow-alchemy-adt/src/chunks/: mcin.rs  mcnk.rs  mhdr.rs  mod.rs
file-formats/world-data/wow-alchemy-wdl/: Cargo.toml  README.md
file-formats/world-data/wow-alchemy-wdl/src/: conversion.rs  error.rs  lib.rs  parser.rs  types.rs  validation.rs  version.rs
file-formats/world-data/wow-alchemy-wdt/: Cargo.toml
file-formats/world-data/wow-alchemy-wdt/src/: conversion.rs  lib.rs
file-formats/world-data/wow-alchemy-wdt/src/chunks/: maid.rs  mphd.rs
file-formats/world-data/wow-wdl/: README.md
file-formats/world-data/wow-wdt/: README.md
file-formats/wow-alchemy-data/: Cargo.toml  README.md
file-formats/wow-alchemy-data-derive/: Cargo.toml  README.md
file-formats/wow-alchemy-data-derive/src/: lib.rs
file-formats/wow-alchemy-data/src/: game_version.rs  lib.rs  std_impls.rs  types.rs  utils.rs
warcraft-rs/: README.md
wow-alchemy/: Cargo.toml  README.md
wow-alchemy-utils/: Cargo.toml  README.md
wow-alchemy/src/: cli.rs  main.rs
wow-alchemy/src/commands/: adt.rs  blp.rs  dbc.rs  dbd.rs  m2.rs  mod.rs  wdl.rs  wdt.rs  wmo.rs
wow-alchemy/src/utils/: mod.rs  tree.rs
