[workspace]
members = [
  # Utils
  "file-formats/wow-alchemy-data",
  "file-formats/wow-alchemy-data-derive",
  "wow-alchemy-utils",

  # World Data
  "file-formats/world-data/wow-alchemy-adt",
  "file-formats/world-data/wow-alchemy-wdl",
  "file-formats/world-data/wow-alchemy-wdt",

  # Graphics
  "file-formats/graphics/wow-alchemy-blp",
  "file-formats/graphics/wow-alchemy-m2",
  "file-formats/graphics/wow-alchemy-wmo",

  # Database
  "file-formats/database/wow-alchemy-cdbc",

  # CLI
  "wow-alchemy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["David Rios <david.rios.gomes@gmail.com>", "Daniel S. Reichenbach <daniel@kogito.network>"]
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/davidrios/wow-alchemy"
homepage = "https://github.com/davidrios/wow-alchemy"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Data structures and utilities
byteorder = "1.5"
rand = "0.9"
tempfile = "3.20"
bitflags = "2.9"
bytes = "1.10"
memchr = "2.7"
glam = "0.30"
memmap2 = "0.9.5"
rayon = "1.10"
custom_debug = "0.6.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
binrw = "0.15.0"
csv = "1.3"

# CLI utilities
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
indicatif = "0.17"

# Development
criterion = { version = "0.6", features = ["html_reports"] }
pretty_assertions = "1.4"
proptest = "1.7"
assert_cmd = "2.0"
predicates = "3.1"
test-case = "3.3"
rstest = "0.25.0"
