[package]
name = "wow-alchemy-utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
custom_debug = { workspace = true }

[features]
trimmed-debug-output = []
