[package]
name = "wow-alchemy"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified CLI for World of Warcraft file format parsing, conversion, and validation"
keywords = ["wow", "warcraft", "m2", "wmo"]
categories = ["command-line-utilities", "game-development"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"

# File format crates
wow-alchemy-data = { path = "../file-formats/wow-alchemy-data", version = "0.2.0", optional = true }
wow-alchemy-cdbc = { path = "../file-formats/database/wow-alchemy-cdbc", version = "0.2.0", optional = true }
wow-alchemy-blp = { path = "../file-formats/graphics/wow-alchemy-blp", version = "0.2.0", optional = true }
wow-alchemy-m2 = { path = "../file-formats/graphics/wow-alchemy-m2", version = "0.2.0", optional = true }
wow-alchemy-wmo = { path = "../file-formats/graphics/wow-alchemy-wmo", version = "0.2.0", optional = true }
wow-alchemy-adt = { path = "../file-formats/world-data/wow-alchemy-adt", version = "0.2.0", optional = true }
wow-alchemy-wdt = { path = "../file-formats/world-data/wow-alchemy-wdt", version = "0.2.0", optional = true }
wow-alchemy-wdl = { path = "../file-formats/world-data/wow-alchemy-wdl", version = "0.2.0", optional = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# UI and formatting
indicatif = { workspace = true }
prettytable-rs = "0.10"
humansize = "2.1"
console = "0.15"

# Utilities
chrono = "0.4"
glob = "0.3"

# Image processing (for BLP)
image = { version = "0.25", optional = true }

# Optional parallel processing
rayon = { version = "1.10", optional = true }

# Optional serialization for data export
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["dbc", "blp", "m2", "wmo", "adt", "wdt", "wdl"]
full = [
  "dbc",
  "blp",
  "m2",
  "wmo",
  "adt",
  "wdt",
  "wdl",
  "serde",
  "extract",
  "parallel",
]
dbc = ["dep:wow-alchemy-cdbc"]
blp = ["dep:wow-alchemy-blp", "dep:image"]
m2 = ["dep:wow-alchemy-m2", "dep:wow-alchemy-data"]
wmo = ["dep:wow-alchemy-wmo"]
adt = ["dep:wow-alchemy-adt"]
wdt = ["dep:wow-alchemy-wdt", "serde"]
wdl = ["dep:wow-alchemy-wdl"]
serde = ["dep:serde", "dep:serde_json"]
extract = ["wow-alchemy-adt?/extract"]
parallel = ["wow-alchemy-adt?/parallel", "wow-alchemy-cdbc?/parallel", "dep:rayon"]
sqlite = ["wow-alchemy-cdbc?/sqlite"]

[[bin]]
name = "wow-alchemy"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
