[package]
name = "wow-alchemy-data-derive"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-alchemy-data-derive"
description = "Macros to automate defining readers and writers for binary formats"
readme = "README.md"
keywords = ["wow", "warcraft", "gamedev"]
categories = ["game-development", "parser-implementations"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.95"
