[package]
name = "wow-alchemy-cdbc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-alchemy-cdbc"
description = "Parser for World of Warcraft DBC (client database) files with serialization support"
readme = "README.md"
keywords = ["wow", "warcraft", "dbc", "database", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
wow-alchemy-utils = { path = "../../../wow-alchemy-utils", version = "0.1.0" }
wow-alchemy-data = { path = "../../wow-alchemy-data", version = "0.1.0" }
wow-alchemy-data-derive = { path = "../../wow-alchemy-data-derive", version = "0.1.0" }
rayon = { workspace = true, optional = true }
custom_debug = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true }
clap = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
directories = "6.0.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
rusqlite = "0.37.0"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }

[features]
default = []
parallel = ["dep:rayon"]
trimmed-debug-output = ["wow-alchemy-utils/trimmed-debug-output"]
