[package]
name = "wow-alchemy-cdbc"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-alchemy-cdbc"
description = "Parser for World of Warcraft DBC (client database) files with serialization support"
readme = "README.md"
keywords = ["wow", "warcraft", "dbc", "database", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
wow-alchemy-utils = { path = "../../../wow-alchemy-utils", version = "0.2.0" }
wow-alchemy-data = { path = "../../wow-alchemy-data", version = "0.2.0" }
wow-alchemy-data-derive = { path = "../../wow-alchemy-data-derive", version = "0.2.0" }
rayon = { workspace = true, optional = true }
custom_debug = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
directories = "6.0.0"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking"] }
rusqlite = { version = "0.37.0", optional = true }

[dev-dependencies]

[features]
default = []
sqlite = ["dep:rusqlite"]
sqlite_bundled = ["rusqlite/bundled"]
parallel = ["dep:rayon"]
trimmed-debug-output = ["wow-alchemy-utils/trimmed-debug-output"]
