[package]
name = "wow-alchemy-m2"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-alchemy-m2"
description = "Parser, validator, and converter for World of Warcraft M2 model files with animation support"
readme = "README.md"
keywords = ["wow", "warcraft", "m2", "models", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
wow-alchemy-utils = { path = "../../../wow-alchemy-utils", version = "0.2.0" }
wow-alchemy-data = { path = "../../wow-alchemy-data", version = "0.2.0" }
wow-alchemy-data-derive = { path = "../../wow-alchemy-data-derive", version = "0.2.0" }
custom_debug = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]

[features]
default = []
trimmed-debug-output = ["wow-alchemy-utils/trimmed-debug-output"]

