[package]
name = "wow-alchemy-adt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-alchemy-adt"
description = "Parser for World of Warcraft ADT terrain files with heightmap and texture layer support"
readme = "README.md"
keywords = ["wow", "warcraft", "adt", "terrain", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
thiserror = { workspace = true }
log = "0.4"
image = { version = "0.25", optional = true }
rayon = { version = "1.10", optional = true }
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = []
extract = ["dep:image"]
parallel = ["dep:rayon"]
mmap = ["dep:memmap2"]
image = ["dep:image"]

