[package]
name = "wow-alchemy-adt"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-alchemy-adt"
description = "Parser for World of Warcraft ADT terrain files with heightmap and texture layer support"
readme = "README.md"
keywords = ["wow", "warcraft", "adt", "terrain", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
wow-alchemy-utils = { path = "../../../wow-alchemy-utils", version = "0.2.0" }
wow-alchemy-data = { path = "../../wow-alchemy-data", version = "0.2.0" }
wow-alchemy-data-derive = { path = "../../wow-alchemy-data-derive", version = "0.2.0" }
thiserror = { workspace = true }
bitflags = { workspace = true }
custom_debug = { workspace = true }

[dev-dependencies]

[features]
default = []

