[package]
name = "wow-alchemy-wdl"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-alchemy-wdl"
description = "Parser for World of Warcraft WDL (World Detail Level) low-resolution terrain files"
readme = "README.md"
keywords = ["wow", "warcraft", "wdl", "terrain", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
thiserror = { workspace = true }
memchr = "2.7"

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []

