[package]
name = "wow-alchemy-wdt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Parser, validator, and converter for World of Warcraft WDT (World Data Table) files"
keywords = ["wow", "wdt", "world-of-warcraft", "game", "parser"]
categories = ["game-development", "parser-implementations"]

[dependencies]
# Core dependencies
thiserror = { workspace = true }
bitflags = { workspace = true }

anyhow = { workspace = true }

# Serialization support (optional)
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[lib]
name = "wow_alchemy_wdt"
path = "src/lib.rs"

